
Drupal 8.0, xxxx-xx-xx (development version)
----------------------
- Improved entity system.
    * Added support for saving and deleting entities through the controller.
    * Entities are now classed objects, implementing EntityInterface.
- Replaced the core routing system with one built on the Symfony2 framework.
- Configuration:
    * Added a centralized file-based configuration system.
    * Allows module authors to provide configuration in a standard format.
    * Implements functionality to get, set, add and remove configuration.
    * Includes ability to override configuration values with language variants 
      and other runtime values.
- Included the HTML5 Shiv library to support HTML5 elements in IE 8 and below.
- Included the following Symfony2 components:
    * ClassLoader - PSR-0-compatible autoload routines.
    * DependencyInjection - Flexible dependency injection container.
    * EventDispatcher - Object-oriented lightweight event handling system.
    * HttpFoundation - Abstraction objects for HTTP requests and responses.
    * HttpKernel - Core system for managing incoming HTTP request and responses.
    * Routing - Framework for mapping incoming requests to controller information.
    * Yaml - Parser for YAML files.
- Support added for making HTTP requests through a proxy server.
- Removed modules from core.
    * The following modules have been removed from core, because contributed
      modules with similar functionality are available:
      * Blog
      * Dashboard
      * Profile
      * Trigger
- Removed the Garland theme from core.
- Removed backwards-compatibility with 'magic_quotes_gpc'/'magic_quotes_runtime'
  PHP configuration settings. Both are required to be disabled.
- Universally Unique IDentifier (UUID):
    * Support for generating and validating UUIDs.
- JavaScript changes:
    * Updated to jQuery 1.7
    * Updated to jQuery UI 1.9
- Tremendously improved language support all around.