@@ -4,6 +4,9 @@ Drupal 8.0, xxxx-xx-xx (development version)
 - Improved entity system.
     * Added support for saving and deleting entities through the controller.
     * Entities are now classed objects, implementing EntityInterface.
+    * Drupal now understands the concept of a "default" revision, tracked
+      independently from the latest revision, allowing for the creation of
+      drafts while the current revision stays published.
 - Replaced the core routing system with one built on the Symfony2 framework.
 - Configuration:
     * Added a centralized file-based configuration system.
